Convert AsciiDoc plugin tests to JUnit 5
Signed-off-by: Hendrik Vennekate <Hendrik.Vennekate@tngtech.com>